<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:id="@+id/registerEditTextUsername"
            android:layout_weight="1">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:id="@+id/registerEditTextPassword"
            android:layout_weight="1">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:id="@+id/registerEditTextEmail"
            android:layout_weight="1">
        </EditText>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerRegisterButton"
        android:layout_gravity="center">
    </Button>

</LinearLayout>